# isodrive

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
scripts/: build_magisk.sh
src/: androidusbisomanager.cpp  configfsisomanager.cpp  logger.cpp  main.cpp  util.cpp
src/include/: androidusbisomanager.h  configfsisomanager.h  logger.h  util.h
tests/: mock_sysfs.cpp  mock_sysfs.h  simple_test.h  test_android.cpp  test_configfs.cpp  test_util.cpp
